<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/selector"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/signup"
        app:layout_constraintEnd_toStartOf="@+id/signup"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signup"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/selector2"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/sign_up"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="30dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/full_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <EditText
        android:id="@+id/myName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:background="@drawable/roundedit"
        android:ems="10"
        android:fontFamily="@font/josefin_slab_thin"
        android:hint="@string/john_lorem"
        android:inputType="textPersonName"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:text=""
        android:textSize="@dimen/textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/marginTop"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myName" />

    <EditText
        android:id="@+id/myNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:background="@drawable/roundedit"
        android:ems="10"
        android:fontFamily="@font/josefin_slab_thin"
        android:hint="07123456678"
        android:inputType="phone"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:text=""
        android:textSize="@dimen/textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/marginTop"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="email address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myNumber" />

    <EditText
        android:id="@+id/myEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:background="@drawable/roundedit"
        android:ems="10"
        android:fontFamily="@font/josefin_slab_thin"
        android:hint="pauljuma736@gmail.com"
        android:inputType="textEmailAddress"

        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:textSize="@dimen/textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/marginTop"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="Set Password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myEmail" />

    <EditText
        android:id="@+id/myPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:background="@drawable/roundedit"
        android:ems="10"
        android:hint="******"

        android:inputType="textPassword"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:textSize="@dimen/textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="@dimen/marginTop"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myPassword" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:background="@drawable/roundedit"
        android:ems="10"
        android:hint="******"
        android:inputType="textPassword"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:textSize="@dimen/textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="@dimen/margin_start"
        android:text="@string/terms_and_condition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

    <CheckBox
        android:id="@+id/subscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="@dimen/margin_start"
        android:text="@string/subscription_to_newsletter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/terms" />

    <Button
        android:id="@+id/login_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="@dimen/margin_start"
        android:background="@drawable/round_login"
        android:text="@string/login_now"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subscribe" />

</android.support.constraint.ConstraintLayout>